--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -369,10 +369,6 @@
         <input class="form-check-input" type="radio" name="payment" id="razorpay" value="razorpay">
         <label class="form-check-label" for="razorpay">Razorpay</label>
     </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="payment" id="wallet" value="wallet">
-        <label class="form-check-label" for="wallet">Wallet</label>
-    </div>
     <div id="paypalContent" class="payment-content">
         <p class="no-margin font-15"></p>
     </div>
@@ -649,7 +645,7 @@ Swal.fire({
             });
         });
     </script> --}}
-<script>
+{{!-- <script>
     document.addEventListener('DOMContentLoaded', async () => {
         const checkoutButton = document.getElementById('checkout-button');
 
@@ -735,9 +731,8 @@ Swal.fire({
                         text: `Order placed successfully`,
                         icon: 'success',
                         confirmButtonText: 'Ok'
-                    }).then(() => {
-                        window.location.href = '/orders'; // Redirect to order summary or orders page
-                    });
+                    })
+                  
                 } else {
                     Swal.fire({
                         title: 'Error',
@@ -749,7 +744,7 @@ Swal.fire({
             }
         });
     });
-</script>
+</script> --}}
 
 
 
