admin profile update

--- a/views/admin/admin-banner.hbs
+++ b/views/admin/admin-banner.hbs
@@ -140,10 +140,10 @@
      </a>
     </li>
     <li class="nav-item">
-      <form class="search-bar">
+      {{!-- <form class="search-bar">
         <input type="text" class="form-control" placeholder="Enter keywords">
          <a href="javascript:void();"><i class="icon-magnifier"></i></a>
-      </form>
+      </form> --}}
     </li>
   </ul>
      
