--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -1,4 +1,8 @@
 <body class="template-blog belle">
+<div id="pre-loader">
+    <img src="assets/images/loader.gif" alt="Loading..." />
+</div>
+
 <div class="pageWrapper">
 	<!--Search Form Drawer-->
 	<div class="search">
