--- a/views/admin/profile.hbs
+++ b/views/admin/profile.hbs
@@ -134,10 +134,10 @@
      </a>
     </li>
     <li class="nav-item">
-      <form class="search-bar">
+      {{!-- <form class="search-bar">
         <input type="text" class="form-control" placeholder="Enter keywords">
          <a href="javascript:void();"><i class="icon-magnifier"></i></a>
-      </form>
+      </form> --}}
     </li>
   </ul>
      
@@ -203,7 +203,7 @@
             </div>
             <div class="card-body pt-5">
                 <img src="asset\images\profile-circle.1023x1024.png" alt="profile-image" class="profile">
-                <h5 class="card-title">Mark Stern</h5>
+                <h5 class="card-title">{{admin.username}}</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="icon-block">
                   <a href="javascript:void();"><i class="fa fa-facebook bg-facebook text-white"></i></a>
@@ -284,12 +284,12 @@
             </ul>
             <div class="tab-content p-3">
                 <div class="tab-pane active" id="profile">
-                    <h5 class="mb-3">User Profile</h5>
+                    <h5 class="mb-3">Admin Profile</h5>
                     <div class="row">
                         <div class="col-lg-12">
                             <h6>About</h6>
                             <p>
-                                Web Designer, UI/UX Engineer
+                                Only Shoes Admin, I'm an ambitious workaholic, but apart from that, pretty simple person.
                             </p>
                             <h6>Hobbies</h6>
                             <p>
