--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -1,7 +1,7 @@
 <body class="template-blog belle">
-<div id="pre-loader">
+{{!-- <div id="pre-loader">
     <img src="assets/images/loader.gif" alt="Loading..." />
-</div>
+</div> --}}
 
 <div class="pageWrapper">
 	<!--Search Form Drawer-->
