--- a/views/user/userprofile.hbs
+++ b/views/user/userprofile.hbs
@@ -657,7 +657,7 @@
                                                                     <label for="input-telephone">Telephone <span
                                                                             class="required-f">*</span></label>
                                                                     <input name="telephone" value="{{this.telephone}}"
-                                                                        id="input-telephone" type="tel" required>
+                                                                        id="input-telephone" type="number" required>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
@@ -695,7 +695,7 @@
                                                                     <label for="input-postcode">Post Code <span
                                                                             class="required-f">*</span></label>
                                                                     <input name="postcode" value="{{this.postCode}}"
-                                                                        id="input-postcode" type="text" required>
+                                                                        id="input-postcode" type="number" required>
                                                                 </div>
                                                                 <div
                                                                     class="form-group col-md-6 col-lg-6 col-xl-6 required">
@@ -812,7 +812,7 @@
                                                                 <label for="input-telephone1">Telephone <span
                                                                         class="required-f">*</span></label>
                                                                 <input name="telephone" value="" id="input-telephone1"
-                                                                    type="tel" required>
+                                                                    type="number" required>
                                                                 <div class="invalid-feedback">Telephone is required.
                                                                 </div>
 
@@ -857,7 +857,7 @@
                                                                 <label for="input-postcode1">Post Code <span
                                                                         class="required-f">*</span></label>
                                                                 <input name="postcode" value="" id="input-postcode1"
-                                                                    type="text" required>
+                                                                    type="number" required>
                                                                 <div class="invalid-feedback">Postcode is required.
                                                                 </div>
 
@@ -955,7 +955,7 @@
                                                     <label for="input-mobile">Mobile <span
                                                             class="required-f">*</span></label>
                                                     <input name="mobile" value="" id="input-mobile" class="form-control"
-                                                        type="text">
+                                                        type="number">
                                                 </div>
                                             </div>
                                             <div class="row">
